# Bonded-App

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  README_MVP_IMPLEMENTATION.md  canister_ids.json  deploy-fix.sh  dfx.json  index.js  mvp-validation-test.js  package-lock.json  package.json  vercel-build.sh  vercel.json  vite.config.js
.github/workflows/: deploy.yml
docs/: Bonded KYC Overview with Matter-ID.md  Bonded-OpenChat Integration  Bonded-OpenChat Integration.md  Bonded-OpenChat.md  KYC overview with Matter-ID  KYC overview with Matter-ID.md  Kill-Switch-Spec.md  Permanent-Passport-spec.md  Process Flow for UI UX.docx  Process Flow for UI UX.md  arweave-integration-spec.md  index.html
scripts/: deploy-multi-canister.sh  deploy-test.sh  download-models.sh  emergency-build.sh  fix-exports.sh
src/bonded-app-backend/: Cargo.toml  bonded-app-backend.did
src/bonded-app-backend/src/: bft_consensus.rs  bft_evidence.rs  bft_manager.rs  bft_relationships.rs  bft_storage.rs  client_storage.rs  evidence.rs  lib.rs  relationships.rs  storage.rs  types.rs  users.rs  utils.rs
src/bonded-app-frontend/: AI_IMPLEMENTATION.md  PWA.md  README-PWA.md  env.example  index.html  package.json  styleguide.css  tailwind.config.js  test-ai-integration.js  test-canister-only.js  test-integration.js  test-mvp-integration.js  test-yoti-integration.js  vercel.json  vite.config.js
src/bonded-app-frontend/dist-ai/: canister-registry.json  index.html
src/bonded-app-frontend/dist-assets/: index.html  multi-canister-sw.js
src/bonded-app-frontend/dist-main/: .ic-assets.json5  index.html  service-worker.js
src/bonded-app-frontend/dist-media/: index.html
src/bonded-app-frontend/dist-vendor/: index.html
src/bonded-app-frontend/public/: .ic-assets.json5  _redirects  browserconfig.xml  manifest.json  offline.html  robots.txt  service-worker-dev.js  service-worker.js  simple-ai-test.html  test-ai.html  test-sw.html
src/bonded-app-frontend/scripts/: deploy-helper.js  laptop-friendly-build.js  multi-canister-build.js  start-local.sh  start.js
src/bonded-app-frontend/src/: App.jsx  App.jsx.backup  bigint-replacement.js  fonts.css  index.css  index.scss  main.jsx  sw-registration.js  test-mvp-functionality.js  test-mvp-integration.js  (+1 more)
(+308 files in other folders)
