[package]
name = "bonded-app-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ic-stable-structures = "0.6"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
base64 = "0.21"
time = { version = "0.3", features = ["serde", "macros"] }
ic-cdk-macros = "0.9"