[package]
name = "bonded-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["custom"], default-features = false }
ic-stable-structures = "0.6"
time = "0.3"

# Real cryptography dependencies for threshold schemes
curve25519-dalek = { version = "4.1", features = ["rand_core"], default-features = false }
ed25519-dalek = { version = "2.1", features = ["rand_core"], default-features = false }
rand_core = { version = "0.6", default-features = false }
hkdf = "0.12"
aes-gcm = "0.10"

# Note: Simplified XOR-based threshold cryptography for MVP
# sharks = "0.3"  # Can be added later for full Shamir's Secret Sharing